<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/setting_item_layout">

    <TextView
        style="@style/setting_item_theme"
        android:text="@string/setting_debug_theme" />

    <RelativeLayout
        android:id="@+id/detailLayout"
        style="@style/setting_item_switch_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/setting_item_switch_title"
                android:text="@string/setting_debug_detail_title" />

            <TextView
                style="@style/setting_item_text_subtitle"
                android:text="@string/setting_debug_detail_subtitle"/>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/detailButton"
            style="@style/setting_item_switch" />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/crashLayout"
        style="@style/setting_item_switch_layout">

        <TextView
            style="@style/setting_item_switch_title"
            android:text="@string/setting_debug_crash_title" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/crashButton"
            style="@style/setting_item_switch" />

    </RelativeLayout>

</LinearLayout>