<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/setting_item_layout">

    <TextView
        android:id="@+id/serverTheme"
        style="@style/setting_item_theme"
        android:text="@string/setting_server_theme" />

    <LinearLayout
        android:id="@+id/hostLayout"
        style="@style/setting_item_text_layout">

        <TextView
            android:id="@+id/hostTitle"
            style="@style/setting_item_text_title"
            android:text="@string/setting_server_host_title" />

        <TextView
            android:id="@+id/hostText"
            style="@style/setting_item_text_subtitle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyLayout"
        style="@style/setting_item_text_layout">

        <TextView
            android:id="@+id/keyTitle"
            style="@style/setting_item_text_title"
            android:text="@string/setting_server_key_title" />

        <TextView
            android:id="@+id/keyText"
            style="@style/setting_item_text_subtitle" />
    </LinearLayout>

</LinearLayout>