<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.IntroduceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/detailLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:contentDescription="@string/content_cover"
                android:src="@drawable/bg_placeholder"
                android:scaleType="fitCenter" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textColor="?attr/textColor2"
                    android:gravity="start"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/startRead"/>

                <TextView
                    android:id="@+id/startRead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/detail_introduce_start_read"
                    android:gravity="center"
                    android:background="@drawable/bg_button"
                    android:textColor="?attr/textColor1"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@id/bookmark"/>

                <TextView
                    android:id="@+id/bookmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/detail_introduce_add_bookmark"
                    android:gravity="center"
                    android:background="@drawable/bg_button"
                    android:textColor="?attr/textColor1"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_divider"
            app:layout_constraintTop_toBottomOf="@+id/detailLayout"/>

        <LinearLayout
            android:id="@+id/tageViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintBottom_toTopOf="@id/line2">


            <com.sena.lanraragi.ui.widet.TagsViewer
                android:id="@+id/tageViewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_divider"
            app:layout_constraintTop_toBottomOf="@+id/tageViewLayout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.sena.lanraragi.ui.widet.TagsViewer
                android:id="@+id/categoryViewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>